# compressedseg

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  LICENSE_PYTHON.txt  MANIFEST.in  README.md  compress_segmentation.cc  compress_segmentation.h  compress_segmentation_test.cc  compressedseg.go  compressedseg_test.go  decompress_segmentation.cc  decompress_segmentation_test.cc  setup.cfg  setup.py  test.py
src/: compressed_segmentation.cpp  compressed_segmentation.pyx
