[metadata]
name = compressed_segmentation
url = https://github.com/william-silversmith/compressedseg
summary = Neuroglancer compressed_segmentation codec.
description-file = README.md
author = Jeremy Maitin-Shepard, Stephen Plaza, and William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/janelia-flyem/compressedseg
license = LICENSE.txt
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = compressed_segmentation
